# 2024multicore_processer_final_project

./: .gitignore  BMP.h  CMakeLists.txt  LoadBMP.h  README.md  canny.py  canny_C_opencv.cu  canny_python.py  create_plt.py  device.cu  display_video.py  main.cu  main_cuda.cu  test.cu
include/: canny_cuda_v1.h  canny_cuda_v2.h  canny_cuda_v3.h  canny_cuda_v4.h
